--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -22,5 +22,8 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
     "zod": "^3.24.4"
+  },
+  "devDependencies": {
+    "tsup": "^8.5.0"
   }
 }
