--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.76.1",
+    "@tanstack/react-query-devtools": "^5.76.1",
     "i18next": "^25.1.3",
     "i18next-browser-languagedetector": "^8.1.0",
     "react": "^19.1.0",
